--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="A.png" />
 
 </head>
-<body bgcolor="#33FFE3">
+<body >
   <header>
     <div class="contenedor">
     <div class="logo">
@@ -16,15 +16,15 @@
     <nav class="menu">
       <ul>
         <li><a href="index.html">INICIO</a></li>
-        <li><a href="index.html">NOSOTROS</a></li>
-        <li><a href="index.html">SERVICIOS</a></li>
-        <li><a href="index.html">SOPORTE</a></li>
-        <li><a href="index.html">CONTRATAR</a></li>
+        <li><a href="nosotros.html">NOSOTROS</a></li>
+        <li><a href="servicios.html">SERVICIOS</a></li>
+        <li><a href="soporte.html">SOPORTE</a></li>
+
       </ul>
     </nav>
   </div>
   </header>
-    <center><table border="1" bordercolor="#33FFE3">
+    <center><table border="3" bordercolor="#ffffff">
       <tbody>
         <tr>
           <td><img src="02.jpg"width="500px"height="350px"></td>
@@ -34,9 +34,9 @@
     <center>
     <img src="a.gif" width="1000px">
   </center>
-          <footer>
-      <center><p>&copy; 2022 INTERCOM DZITBALCHE Derechos Reservados: Jose Alberto Medina Cahuich</p>
-      </center>
-    </footer>
+  <footer>
+  <center><font color="white">&copy; 2022 INTERCOM DZITBALCHE Derechos Reservados: Jose Alberto Medina Cahuich</font>
+  </center>
+  </footer>
 </body>
 </html>
