--- a/index.html
+++ b/index.html
@@ -24,16 +24,67 @@
     </nav>
   </div>
   </header>
-    <center><table border="3" bordercolor="#ffffff">
-      <tbody>
-        <tr>
-          <td><img src="02.jpg"width="500px"height="350px"></td>
-        </tr>
-            </tbody>
-    </table></center>
-    <center>
-    <img src="a.gif" width="1000px">
+  <br>
+
+  <br>
+  <br>
+  <center>
+  <table>
+    <tr>
+      <td><font face="Arial Black" color="white" size="7px">INTERCOM</font>
+        <br>
+        <font face="Arial" size="5px" color="#642EFE">Conéctate y navega
+        fácil y rápido en <br> miles de sitios sin restricción</font>
+      </td>
+      <td width="100px"></td>
+      <td><img src="dd.jpg" width="350px"></td>
+    </tr>
+  </table>
   </center>
+  <br>
+  <br>
+  <br>
+  <br>
+  <center><font face="Arial" size="5px" color="white">EL INTERNET DE ALTA VELOCIDAD LLEGA FACIL HASTA TU HOGAR</font></center>
+  <br>
+  <br>
+  <center>
+    <table>
+      <tr>
+        <td><fieldset><img src="casa1.jpeg" width="350px"height="235px"></fieldset></td>
+        <td></td>
+        <td><fieldset><img src="casa2.png" width="350px" height="235px"></fieldset></td>
+        <td></td>
+        <td><fieldset><img src="casa3.jpeg" width="350px"height="235px"></fieldset></td>
+      </tr>
+    </table>
+  </center>
+
+<br>
+  <br>
+  <br>
+  <br>
+  <center><font face="Arial" size="5px" color="white">ACCESORIOS</font></center>
+  <br>
+    <center>
+    <table>
+      <tr>
+        <td><img src="roue.jpeg" width="350px"></td>
+        <td width="100px"></td>
+        <td><font face="Arial" size="5px" color="white">Haz que el Internet de INTERCOM <br>llegue a cada rincón.</font>
+  <font face="Arial" size="3px" color="white">
+
+  <li>Fácil de instalar.</li><br>
+  <li>Evita que la señal disminuya por obstáculos como paredes y muebles grandes.</li><br>
+  <li>Cómpralo aquí en intercom.</li><br>
+  <li>Visitanos y Conoce nuestros Extensores WiFI</li></font></td>
+      </tr>
+    </table>
+  </center>
+  <br>
+  <br>
+  <br>
+  <br>
   <footer>
   <center><font color="white">&copy; 2022 INTERCOM DZITBALCHE Derechos Reservados: Jose Alberto Medina Cahuich</font>
   </center>
